Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27864

Regression: Doubleclick on sizegrip on the lower right corner of application main window doesn't grab the grip

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0 RC 1
    • 5.0.0 Beta 2
    • None
    • Windows 7
    • 8ff56abd38ac242f9898a453d0522c2912496408

    Description

      This is a regression from Qt4.

      Simple to repro with e.g. sample application from QTBUG-27639:
      Just doubleclick and hold on sizegrip of the application main window -> Sizegrip mouse cursor is left on as long as mouse button is pressed down and the cursor remains within the main window, but moving the mouse doesn't resize the window.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes